name:            cereal-conduit
version:         0.7.2
license:         BSD3
license-file:    LICENSE
author:          Myles C. Maxfield <myles.maxfield@gmail.com>
maintainer:      Myles C. Maxfield <myles.maxfield@gmail.com>
synopsis:        Turn Data.Serialize Gets and Puts into Sources, Sinks, and Conduits
description:
    Turn Data.Serialize Gets and Puts into Sources, Sinks, and Conduits.
    .
    [0.7]
        Upgrade to conduit 1.0.0
category:        Conduit
stability:       Experimental
cabal-version:   >= 1.8
build-type:      Simple
homepage:        https://github.com/litherum/cereal-conduit
bug-reports:     https://github.com/litherum/cereal-conduit/issues

library
    build-depends: base         >= 4       && < 5
                 , conduit      >= 1.0.0   && < 1.2
                 , resourcet    >= 0.4     && < 1.2
                 , cereal       >= 0.4.0.0 && < 0.5
                 , bytestring
                 , transformers >= 0.2.0.0
    exposed-modules: Data.Conduit.Cereal
                   , Data.Conduit.Cereal.Internal
    ghc-options:     -Wall

Test-Suite test-cereal-conduit
    type: exitcode-stdio-1.0
    main-is: Test/Main.hs
    build-depends: base
                 , conduit
                 , cereal
                 , bytestring
                 --, test-framework-hunit
                 , HUnit
                 , resourcet
                 , mtl
                 , transformers

source-repository head
  type:     git
  location: git://github.com/litherum/cereal-conduit.git
