Name:                conduit
Version:             0.0.0
Synopsis:            A pull-based approach to streaming data.
Description:         Conduits are an approach to the streaming data problem. It is meant as an alternative to enumerators/iterators, hoping to address the same issues with different trade-offs based on real-world experience with enumerators. See the README.md file for more details.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/yesodweb/wai

Library
  Exposed-modules:     Data.Conduit
                       Data.Conduit.Binary
                       Data.Conduit.List
                       Control.Monad.Trans.Resource
  Build-depends:       base                     >= 4            && < 5
                     , lifted-base              >= 0.1          && < 0.2
                     , transformers-base        >= 0.4          && < 0.5
                     , monad-control            >= 0.3          && < 0.4
                     , containers
                     , transformers             >= 0.2.2        && < 0.3
                     , system-fileio            >= 0.3.3        && < 0.4
                     , system-filepath          >= 0.4.3        && < 0.5
                     , bytestring               >= 0.9

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
