Name:                conduit
Version:             0.0.0
Synopsis:            A pull-based approach to streaming data.
Description:         Conduits are an approach to the streaming data problem. It is meant as an alternative to enumerators/iterators, hoping to address the same issues with different trade-offs based on real-world experience with enumerators. See the README.md file for more details.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/yesodweb/wai
extra-source-files:  test/main.hs

Library
  Exposed-modules:     Data.Conduit
                       Data.Conduit.Binary
                       Data.Conduit.List
                       Control.Monad.Trans.Resource
                       Data.Conduit.Attoparsec
  Other-modules:       Data.Conduit.Types.Source
                       Data.Conduit.Types.Sink
                       Data.Conduit.Types.Conduit
                       Data.Conduit.Util.Source
                       Data.Conduit.Util.Sink
                       Data.Conduit.Util.Conduit
  Build-depends:       base                     >= 4            && < 5
                     , lifted-base              >= 0.1          && < 0.2
                     , transformers-base        >= 0.4          && < 0.5
                     , monad-control            >= 0.3          && < 0.4
                     , containers
                     , transformers             >= 0.2.2        && < 0.3
                     , system-fileio            >= 0.3.3        && < 0.4
                     , system-filepath          >= 0.4.3        && < 0.5
                     , bytestring               >= 0.9
                     , attoparsec               >= 0.10
                     , text                     >= 0.10
  ghc-options:     -Wall

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    type: exitcode-stdio-1.0
    cpp-options:   -DTEST
    build-depends:   conduit
                   , base
                   , hspec
                   , HUnit
                   , QuickCheck
                   , bytestring
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
