Name:                wai-extra
Version:             0.3.0
Synopsis:            Provides some basic WAI handlers and middleware.
Description:         The goal here is to provide common features without many dependencies.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Homepage:            http://github.com/snoyberg/wai-extra
Category:            Web
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           Stable

Library
  Build-Depends:     base >= 3 && < 5,
                     bytestring >= 0.9 && < 0.10,
                     wai >= 0.3.0 && < 0.4,
                     old-locale >= 1.0 && < 1.1,
                     time >= 1.1.4 && < 1.3,
                     network >= 2.2.1.5 && < 2.4,
                     directory >= 1.0.1 && < 1.2,
                     zlib-bindings >= 0.0 && < 0.1,
                     blaze-builder-enumerator >= 0.2 && < 0.3,
                     transformers >= 0.2 && < 0.3,
                     enumerator >= 0.4 && < 0.5,
                     blaze-builder >= 0.2.1 && < 0.3
  Exposed-modules:   Network.Wai.Handler.CGI
                     Network.Wai.Handler.SimpleServer
                     Network.Wai.Middleware.CleanPath
                     Network.Wai.Middleware.Gzip
                     Network.Wai.Middleware.Jsonp
                     Network.Wai.Zlib
                     Network.Wai.Parse
                     Network.Wai.Handler.Helper
  ghc-options:       -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/wai-extra.git
