Name:                wai-extra
Version:             0.4.0.2
Synopsis:            Provides some basic WAI handlers and middleware.
Description:         The goal here is to provide common features without many dependencies.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Homepage:            http://github.com/snoyberg/wai-extra
Category:            Web
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           Stable

Library
  Build-Depends:     base >= 3 && < 5,
                     bytestring >= 0.9 && < 0.10,
                     wai >= 0.4 && < 0.5,
                     old-locale >= 1.0 && < 1.1,
                     time >= 1.1.4 && < 1.3,
                     network >= 2.2.1.5 && < 2.4,
                     directory >= 1.0.1 && < 1.2,
                     zlib-bindings >= 0.0 && < 0.1,
                     blaze-builder-enumerator >= 0.2 && < 0.3,
                     transformers >= 0.2 && < 0.3,
                     enumerator >= 0.4.7 && < 0.5,
                     blaze-builder >= 0.2.1.3 && < 0.4,
                     http-types >= 0.6 && < 0.7,
                     text >= 0.5 && < 1.0,
                     case-insensitive >= 0.2 && < 0.3
  Exposed-modules:   Network.Wai.Handler.CGI
                     Network.Wai.Middleware.AcceptOverride
                     Network.Wai.Middleware.Autohead
                     Network.Wai.Middleware.CleanPath
                     Network.Wai.Middleware.Debug
                     Network.Wai.Middleware.Gzip
                     Network.Wai.Middleware.Jsonp
                     Network.Wai.Middleware.MethodOverride
                     Network.Wai.Middleware.Rewrite
                     Network.Wai.Middleware.Vhost
                     Network.Wai.Zlib
                     Network.Wai.Parse
  ghc-options:       -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/wai-extra.git
