Name:                wai-handler-devel
Version:             0.1.0.1
Synopsis:            WAI server that automatically reloads code after modification.
Description:         This handler automatically reloads your source code upon any changes. It works by using the hint package, essentially embedding GHC inside the handler. The handler (both the executable and library) takes three arguments: the port to listen on, the module name containing the application function, and the name of the function.
                     .
                     One major note: the type of the application is most likely not what you expect. A common case for WAI applications is having a withApplication function, and this library assumes this is the case. Therefore, the type signature of your application function must be:
                     .
                     > withYourApp :: (Application -> IO ()) -> IO ()
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Homepage:            http://github.com/snoyberg/wai-handler-devel
Category:            Web
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           Stable

Source-repository head
    type:            git
    location:        git://github.com/snoyberg/wai-handler-devel.git

Library
  Build-Depends:     base >= 3 && < 5
                   , wai >= 0.2.1 && < 0.3
                   , wai-extra >= 0.2.3 && < 0.3
                   , directory >= 1.0 && < 1.1
                   , sendfile >= 0.6 && < 0.8
                   , network >= 2.2 && < 2.3
                   , bytestring >= 0.9 && < 0.10
                   , hint >= 0.3.2.3 && < 0.4
                   , utf8-string >= 0.3 && < 0.4
  Exposed-modules:   Network.Wai.Handler.DevelServer
  ghc-options:       -Wall

Executable           wai-handler-devel
  Build-Depends:     cmdargs >= 0.4 && < 0.7
  ghc-options:       -Wall -O2 -threaded
  main-is:           wai-handler-devel.hs
