name:            wai-handler-fastcgi
version:         0.2.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Wai handler to fastcgi
category:        Web
stability:       stable
cabal-version:   >= 1.2
build-type:      Configure
extra-source-files: configure fastcgi.buildinfo.in
homepage:        http://github.com/snoyberg/hack-handler-fastcgi/tree/master

library
    build-depends:   base >= 4 && < 5,
                     wai >= 0.2.0 && < 0.3.0,
                     wai-extra >= 0.2.0 && < 0.3.0,
                     bytestring >= 0.9.1.4 && < 0.10
    exposed-modules: Network.Wai.Handler.FastCGI
    ghc-options:     -Wall
    includes:        fcgiapp.h
    extra-libraries: fcgi
