name:            wai-handler-fastcgi
version:         0.3.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Wai handler to fastcgi
category:        Web
stability:       stable
cabal-version:   >= 1.2
build-type:      Configure
extra-source-files: configure fastcgi.buildinfo.in
homepage:        http://github.com/snoyberg/wai-handler-fastcgi

library
    build-depends:   base              >= 4           && < 5
                   , wai               >= 0.3         && < 0.4
                   , wai-extra         >= 0.3         && < 0.4
                   , bytestring        >= 0.9         && < 0.10
    exposed-modules: Network.Wai.Handler.FastCGI
    ghc-options:     -Wall
    includes:        fcgiapp.h
    extra-libraries: fcgi
