Name:                wai-handler-launch
Version:             0.0.0
Synopsis:            Launch a web app in the default browser.
Description:         This handles cross-platform launching and inserts Javascript code to ping the server. When the server no longer receives pings, it shuts down.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library
    Exposed-modules: Network.Wai.Handler.Launch
    build-depends: base                    >= 4      && < 5
                 , wai                     >= 0.4    && < 0.5
                 , warp                    >= 0.4    && < 0.5
                 , http-types              >= 0.6    && < 0.7
                 , transformers            >= 0.2    && < 0.3
                 , bytestring              >= 0.9    && < 1
                 , blaze-builder           >= 0.3    && < 0.4
                 , enumerator              >= 0.4    && < 0.5
    if os(windows)
        c-sources: windows.c
        cpp-options: -DWINDOWS
        extra-libraries: Shell32
    else
        build-depends: process >= 1.0 && < 1.2
