name:            wai-test
version:         0.1.0.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Unit test framework (built on HUnit) for WAI applications.
category:        Testing, Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/snoyberg/wai-test/

library
    build-depends:   base                      >= 4        && < 5
                   , wai                       >= 0.4      && < 0.5
                   , bytestring                >= 0.9.1.4  && < 0.10
                   , blaze-builder             >= 0.2.1    && < 0.4
                   , transformers              >= 0.2      && < 0.3
                   , containers                >= 0.2      && < 0.5
                   , enumerator                >= 0.4.7    && < 0.5
                   , cookie                    >= 0.2      && < 0.3
                   , blaze-builder-enumerator  >= 0.2      && < 0.3
                   , HUnit                     >= 1.2      && < 1.3
                   , http-types                >= 0.6      && < 0.7
                   , case-insensitive          >= 0.2      && < 0.4
    exposed-modules: Network.Wai.Test
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/wai-test.git
